# TSPi_Action_CAM

./: CMakeLists.txt  Dockerfile  README.md  build.sh  civetweb.conf  index.html  lv_conf.h  main.c  test-001.xml  toolchain.cmake
BOOT/: boot.img
DTS/: tspi-rk3566-dsi-v10.dtsi  tspi-rk3566-user-v10-linux.dts
GNSS/: CMakeLists.txt
GNSS/src/: gnss_control.c  gnss_reader.c  gnss_reader.h  main.c
IMU/: CMakeLists.txt
IMU/src/: ak8963.c  i2c_utils.c  i2c_utils.h  imu_filter.h  imu_logger.h  imu_reader.c  imu_reader.h  ipc_comm.h  logger.c  main.c  mpu6500.c  sensor_read.c
Video/: CMakeLists.txt
Video/include/: config.h  imu_utils.h  pipeline.h  shm_utils.h  utils.h
Video/src/: config.c  imu_utils.c  main.c  pipeline.c  shm_utils.c  utils.c
Video/usr/lib/: librga.so.2  librga.so.2.1.0  librga.so.2.2.0  librockchip_mpp.so.0  librockchip_vpu.so.0
Video/usr/lib/pkgconfig/: librga.pc
app/imu/: imu_logger
app/lvgl/: lvglsim
app/video/: VideoProcess
app/web/: civetweb  index.html
ui/: ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
ui/components/: ui_comp_hook.c
ui/screens/: ui_Menu.c  ui_Screen1.c
ui/sdcard/: sd_status.c  sd_status.h
video_pipeline/: video_pipeline.c  video_pipeline.h
